@@ -9,7 +9,13 @@
       android:largeScreens="true"
       android:anyDensity="true"
     />
-    <application android:label="@string/app_name" android:icon="@drawable/launcher" android:name="com.keepassdroid.app.App">
+    <application 
+      android:label="@string/app_name"
+      android:icon="@drawable/launcher"
+      android:name="com.keepassdroid.app.App"
+      android:backupAgent="com.keepassdroid.backup.SettingsBackupAgent">
+        <meta-data android:name="com.google.android.backup.api_key"
+          android:value="AEdPqrEAAAAIKwReNelmy5SvhZzK3bpK_JisjzUko6cL_8GR4w" />
         <activity android:name=".KeePass"
                   android:label="@string/app_name">
             <intent-filter>
