@@ -1,3 +1,5 @@
+  * Support Android 2.2 backup manager
+
 KeePassDroid (1.8)
   * Layout updates
   * Custom icon support
